--- a/ansible/roles/app/templates/puma.service.j2
+++ b/ansible/roles/app/templates/puma.service.j2
@@ -4,7 +4,7 @@ After=network.target
 
 [Service]
 Type=simple
-EnvironmentFile=/home/{{deploy_user}}}/db_config
+EnvironmentFile=/home/{{deploy_user}}/db_config
 User={{deploy_user}}
 WorkingDirectory=/home/{{deploy_user}}/reddit
 ExecStart=/bin/bash -lc 'puma -b tcp://0.0.0.0:{{app_port | default('9292')}}'
